Closed Bug 1961837 Opened 11 months ago Closed 11 months ago

IPC fuzzing interface missing top-level protocols

Categories

(Core :: Fuzzing, defect)

defect

Tracking

()

RESOLVED FIXED
139 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox137 --- unaffected
firefox138 --- unaffected
firefox139 --- fixed

People

(Reporter: truber, Assigned: truber)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1899503 added new top-level IPC PRemoteWorkerDebuggerManager and PRemoteWorkerDebugger protocols.

Set release status flags based on info from the regressing bug 1899503

Pushed by jdschwa@gmail.com: https://hg.mozilla.org/integration/autoland/rev/383dd96ae1fc Add missing toplevel actors to IPCFuzzController. r=decoder
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 139 Branch
QA Whiteboard: [qa-triage-done-c140/b139]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: