Bug 1961837 - Add missing toplevel actors to IPCFuzzController. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D246239